Finaliza geração de relatório com Jasper
