# service/src/main/java/br/com/sw2you/realmeet/report/handler/AllocationReportHandler.java
@@ -24,8 +24,8 @@ import org.springframework.stereotype.Component;
 
 @Component
 public class AllocationReportHandler extends AbstractReportHandler<Allocation, AllocationReportData> {
-    private static final String PARAM_DATE_FROM = "DateFrom";
-    private static final String PARAM_DATE_TO = "DateTo";
+    private static final String PARAM_DATE_FROM = "DateFromFilter";
+    private static final String PARAM_DATE_TO = "DateToFilter";
     private static final String FIELD_DATE_FROM = "DateFrom";
     private static final String FIELD_DATE_TO = "DateTo";
     private static final String FIELD_ROOM_NAME = "RoomName";
